tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
entry
  let f : (foo: Float) -> Float = { \o -> o.bar };
  ()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_1.kk:2:45
  │
2 │   let f : (foo: Float) -> Float = { \o -> o.bar };
  │                                             ^^^ No such property
  │
  = Available properties:
      foo
